--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <title>Explore, Dream, Escape</title>
     <meta
       name="keywords"
-      content="Travel planning, travel bundles, travel escapes"
+      content="Travel planning, travel bundles, travel escapes, for you guyss"
     />
     <meta
       name="description"
