--- a/app/index.html
+++ b/app/index.html
@@ -32,10 +32,13 @@
 
     <div class="large-hero">
       <img src="assets/images/hero--large.jpg" />
-      <h1>Таны нандин дурсамж.</h1>
+      <div class="large-hero__text-content">
+      <h1 class="large-hero__title">Таны нандин дурсамж.</h1>
       <h2>Ганцхан алхам үлдлээ.</h2>
       <p>Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
-      <p><a href="#">Өнөөдөр эхлэе</a></p>
+      <p><a href="#">Өнөөдөр эхлэе</a></p> 
+    </div>
+    
     </div>
 
     <div id="our-beginning">
@@ -169,5 +172,7 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
+  <script src="bundled.js" ></script>
   </body>
+
 </html>
